# synaptic

./: .gitignore  README.md  pyproject.toml
synaptic/: cli.py  cloud_detector.py  graph.py  http_detector.py  parser.py  scanner.py  tui.py  utils.py
